--- a/RC Tutorial.ipynb
+++ b/RC Tutorial.ipynb
@@ -319,7 +319,7 @@
     }
    ],
    "source": [
-    "t, x = simulate(model, timespan=timespan, x0=x0, control_vars={'u_0':2})\n",
+    "t, x = simulate(model, timespan=timespan, x0=x0, control_vars={'u_0':'2'})\n",
     "plot(t,x)\n",
     "plt.savefig(\"RC_4.svg\", pad_inches=0, bbox_inches=\"tight\")"
    ]
